--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div id="mobile-menu">
           <div id="mobile-footer-container">
             <div class="mobile-link">
-                <a href="#" class="fa fa-facebook"> </a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="" class="fa fa-instagram" ></a>
+                <a href="https://www.facebook.com/walter.rubio.9847/" class="fa fa-facebook"> </a>
+                <a href="https://twitter.com/WalterR46158465" class="fa fa-twitter"></a>
+                <a href="https://www.instagram.com/walterj.rubio/" class="fa fa-instagram" ></a>
             </div>
           </div>
         </div>
