--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--  CSS -->
-    <link rel="stylesheet" type="text/css" href="style/estilos.css">
-    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="style/estilos.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!--  js -->
-    <script src="proyectowalter/jose.js"></script>
-    <!-- iconos -->
+    <script src="C:\xampp\htdocs\proyectowalter\jose.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Inicio</title>
+    <title>Portafolio - Diseñador Gráfico</title>
 </head>
 
 <body>
@@ -22,9 +17,9 @@
             <nav class="navigation">
                 <ul class="navigation__list navigation__list--inline">
                     <li class="navigation__item"><a href="#" class="navigation__link navigation__link--is-active">Home</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link">Archivos</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Proyectos</a></li>
                     <li class="navigation__item"><a href="#" class="navigation__link">Contacto</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link">Servicios</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Sobre mí</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,9 +27,10 @@
 
     <main class="main">
         <div class="grid">
-            <h1>Inteligencia artificial.</h1>
-            <p>Hoy en día como podemos ver el mundo está sufriendo cambios muy constantes y sobre todo a un ritmo demasiado acelerado...</p>
-            <!-- Más contenido aquí -->
+            <h1>Portafolio de Diseño Gráfico</h1>
+            <p>¡Bienvenido a mi portafolio! Aquí encontrarás una selección de mis proyectos y trabajos de diseño gráfico.</p>
+            <p>El diseño es mi pasión y me esfuerzo por crear piezas creativas y visuales que transmitan mensajes impactantes.</p>
+            <p>Si estás buscando diseños únicos y de calidad, ¡no dudes en ponerte en contacto conmigo!</p>
         </div>
     </main>
 
@@ -43,26 +39,36 @@
     </nav>
 
     <div id="content">
-        <h3>aviso importante</h3>
-        <h3>Programador web Nicaragua 2021</h3>
-        <h3>WALTER J.R</h3>
+        <!-- Sección para mostrar proyectos -->
+        <!-- Aquí se podrían agregar imágenes, diseños y trabajos realizados -->
+        <!-- Por ejemplo: -->
+        <div class="project">
+            <img src="ruta/a/imagen-proyecto-1.jpg" alt="Proyecto 1">
+            <p>Descripción del proyecto 1</p>
+        </div>
+        <div class="project">
+            <img src="ruta/a/imagen-proyecto-2.jpg" alt="Proyecto 2">
+            <p>Descripción del proyecto 2</p>
+        </div>
+        <!-- Más proyectos -->
     </div>
 
     <footer id="mobile-footer">
         <div id="mobile-menu">
             <div id="mobile-footer-container">
                 <div class="mobile-link">
-                    <a href="https://www.facebook.com/walter.rubio.9847/" class="fa fa-facebook"> </a>
-                    <a href="https://twitter.com/WalterR46158465" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com/walterj.rubio/" class="fa fa-instagram"></a>
+                    <!-- Enlaces a redes sociales -->
+                    <a href="#" class="fa fa-facebook"> </a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-google"></a>
+                    <a href="#" class="fa fa-instagram" ></a>
                 </div>
             </div>
         </div>
         <div id="mobile-footer-close"></div>
     </footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
